# fastapi-template

./: .env.example  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
base/: AGENTS.md  pyproject.toml
base/src/: main.py
base/tests/: test_main.py
src/: config.py  constants.py  exceptions.py  main.py  schemas.py
webhook/: .env.example  AGENTS.md  README.md  pyproject.toml
webhook/.github/workflows/: ci.yml
webhook/src/: config.py  main.py
