[project]
name = "fastapi-template"
version = "0.1.0"
description = "A minimal template for kickstarting new FastAPI projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "pytest>=9.0.3",
    "httpx2>=2.5.0",
]
